# nolan-portfolio

./: .sesskey  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
components/: __init__.py  footer.py  header.py  hero.py  project_card.py  resume.py
data/: resume.yaml
